# dtnsim-web-wasm

./: .gitignore  README.md
.github/workflows/: ci.yml
docs/: ABI.md  BUILD.md  dtnsim.js  dtnsim.wasm  package-lock.json  package.json
docs/ai/: CODING_RULES.md  CONSTRAINTS.md  GOALS.md  SYSTEM.md  TASKS.md
docs/design/: architecture.md
wasm/: CMakeCache.txt  CMakeLists.txt  Makefile  bindings.cpp  cmake_install.cmake  dtnsim_api.h  dtnsim_api_js.h
web/: dtnsim.js  dtnsim.wasm  index.html  package-lock.json  package.json  test_puppeteer.js  test_randomwalk.js
